# fda_coursebook

./: .buildinfo  .buildinfo 2  .gitignore  00_Introduction 2.html  00_Introduction.html  01_PythonIntroduction.html  02_DataAccess 2.html  02_DataAccess.html  03_DescriptiveAnalysis.html  04_SupervisedLearning 2.html  04_SupervisedLearning.html  05_LinearRegression 2.html  05_LinearRegression.html  06_Classification.html  07_ModellAccuracy 2.html  07_ModellAccuracy.html  08_ModelComplexity 2.html  08_ModelComplexity.html  09_Regularization 2.html  09_Regularization.html  10_Clustering.html  10_DimensionalityReduction.html  11_Clustering 2.html  11_Clustering.html  11_DimensionalityReduction.html  12_TextAnalysis.html  A_01_math_and_statistics.html  genindex 2.html  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: 00_Introduction.ipynb  02_DataAccess.ipynb  05_LinearRegression.ipynb  06_Classification.ipynb  08_ModelComplexity.ipynb  09_Regularization.ipynb  10_Clustering.ipynb  10_DimensionalityReduction.ipynb  11_Clustering.ipynb  11_DimensionalityReduction.ipynb  A_01_math_and_statistics.ipynb
fdaonlinebook/: 01_PythonIntroduction.ipynb  02_DataAccess.ipynb  03_DescriptiveAnalysis.ipynb  05_LinearRegression.ipynb  06_Classification.ipynb  07_ModellAccuracy.ipynb  08_ModelComplexity.ipynb  09_Regularization.ipynb  11_Clustering.ipynb  12_TextAnalysis.ipynb  _config.yml  _toc.yml  dax.sqlite
fdaonlinebook/_build/.doctrees/: 00_Introduction.doctree  01_PythonIntroduction.doctree  02_DataAccess.doctree  03_DescriptiveAnalysis 2.doctree  (+22 more)
(+66 files in other folders)
