[tool.poetry]
name = "fda-course"
version = "0.1.0"
description = ""
authors = ["Ralf <ralf.kellner@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter-book = "^1.0.3"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
