[project]
name = "fda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tokenizers>=0.21.0",
    "yfinance>=0.2.52",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
]
